--- a/BotLineServer/BotLineServer.vcxproj.filters
+++ b/BotLineServer/BotLineServer.vcxproj.filters
@@ -22,14 +22,8 @@
     <Filter Include="imgui\implot">
       <UniqueIdentifier>{e953af3e-3f66-4317-8efb-b915dc52fa5b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Dialog">
-      <UniqueIdentifier>{db3dfca8-d4dd-4872-a90a-49210dae768c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Network">
       <UniqueIdentifier>{95b88b9e-c925-49ba-8efc-e8bb2081e344}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Network\Object">
-      <UniqueIdentifier>{e697cb27-eddf-4124-935f-984b6cfa8a1c}</UniqueIdentifier>
     </Filter>
     <Filter Include="Network\Socket">
       <UniqueIdentifier>{d72584ec-32a2-43f4-9a1e-648beae4d3c3}</UniqueIdentifier>
@@ -51,6 +45,9 @@
     </Filter>
     <Filter Include="Util\Network">
       <UniqueIdentifier>{3bf863c7-e939-45f3-9b30-79d5316eb3f2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Object">
+      <UniqueIdentifier>{cbb72075-5bf3-40e0-8d5b-bb84af31670d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -75,68 +72,8 @@
     <ClInclude Include="BotLine.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imconfig.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_dx11.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_win32.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="network\object\BotLineObject.h">
-      <Filter>Network\Object</Filter>
-    </ClInclude>
-    <ClInclude Include="network\object\ControllerObject.h">
-      <Filter>Network\Object</Filter>
-    </ClInclude>
-    <ClInclude Include="network\object\JetbotObject.h">
-      <Filter>Network\Object</Filter>
-    </ClInclude>
     <ClInclude Include="network\socket\NetworkManager.h">
       <Filter>Network\Socket</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\implot.h">
-      <Filter>imgui\implot</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\implot_internal.h">
-      <Filter>imgui\implot</Filter>
-    </ClInclude>
-    <ClInclude Include="Log.h">
-      <Filter>Dialog</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjectList.h">
-      <Filter>Dialog</Filter>
-    </ClInclude>
-    <ClInclude Include="DialogManager.h">
-      <Filter>Dialog</Filter>
-    </ClInclude>
-    <ClInclude Include="Dialog.h">
-      <Filter>Dialog</Filter>
-    </ClInclude>
-    <ClInclude Include="Component.h">
-      <Filter>Dialog</Filter>
-    </ClInclude>
-    <ClInclude Include="MainControl.h">
-      <Filter>Dialog</Filter>
-    </ClInclude>
-    <ClInclude Include="network\object\XavierObject.h">
-      <Filter>Network\Object</Filter>
     </ClInclude>
     <ClInclude Include="Util\Component.h">
       <Filter>Util</Filter>
@@ -177,6 +114,57 @@
     <ClInclude Include="Component\JetbotProcessingComponent.h">
       <Filter>Component</Filter>
     </ClInclude>
+    <ClInclude Include="Object\BotLineObject.h">
+      <Filter>Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\ControllerObject.h">
+      <Filter>Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\JetbotObject.h">
+      <Filter>Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\XavierObject.h">
+      <Filter>Object</Filter>
+    </ClInclude>
+    <ClInclude Include="UI\Log.h">
+      <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_memory_editor.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\SharedContext.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\implot.h">
+      <Filter>imgui\implot</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\implot_internal.h">
+      <Filter>imgui\implot</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imconfig.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_dx11.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_win32.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_internal.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BotLineServer.cpp">
@@ -188,59 +176,8 @@
     <ClCompile Include="BotLine.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="imgui\imgui.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_impl_dx11.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_impl_win32.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_tables.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="network\object\ControllerObject.cpp">
-      <Filter>Network\Object</Filter>
-    </ClCompile>
-    <ClCompile Include="network\object\JetbotObject.cpp">
-      <Filter>Network\Object</Filter>
-    </ClCompile>
     <ClCompile Include="network\socket\NetworkManager.cpp">
       <Filter>Network\Socket</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\implot.cpp">
-      <Filter>imgui\implot</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\implot_demo.cpp">
-      <Filter>imgui\implot</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\implot_items.cpp">
-      <Filter>imgui\implot</Filter>
-    </ClCompile>
-    <ClCompile Include="Log.cpp">
-      <Filter>Dialog</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjectList.cpp">
-      <Filter>Dialog</Filter>
-    </ClCompile>
-    <ClCompile Include="DialogManager.cpp">
-      <Filter>Dialog</Filter>
-    </ClCompile>
-    <ClCompile Include="MainControl.cpp">
-      <Filter>Dialog</Filter>
-    </ClCompile>
-    <ClCompile Include="network\object\XavierObject.cpp">
-      <Filter>Network\Object</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>헤더 파일</Filter>
@@ -262,6 +199,48 @@
     </ClCompile>
     <ClCompile Include="Component\JetbotProcessingComponent.cpp">
       <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\ControllerObject.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\JetbotObject.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\XavierObject.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
+    <ClCompile Include="UI\Log.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\implot.cpp">
+      <Filter>imgui\implot</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\implot_demo.cpp">
+      <Filter>imgui\implot</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\implot_items.cpp">
+      <Filter>imgui\implot</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_demo.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_draw.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_dx11.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_win32.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_tables.cpp">
+      <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_widgets.cpp">
+      <Filter>imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
