--- a/BotLineServer/imgui.ini
+++ b/BotLineServer/imgui.ini
@@ -9,28 +9,28 @@ Size=339,111
 Collapsed=0
 
 [Window][Log]
-Pos=338,547
-Size=756,292
+Pos=495,348
+Size=921,306
 Collapsed=0
 
 [Window][Example: Console]
-Pos=633,137
-Size=520,595
+Pos=380,345
+Size=520,550
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=844,119
-Size=582,517
+Pos=586,287
+Size=873,536
 Collapsed=0
 
 [Window][Example: Log]
-Pos=60,60
-Size=500,400
+Pos=615,224
+Size=955,563
 Collapsed=0
 
 [Window][Example: Simple layout]
-Pos=663,209
-Size=535,242
+Pos=476,271
+Size=951,508
 Collapsed=0
 
 [Window][Example: Property editor]
@@ -39,12 +39,12 @@ Size=430,450
 Collapsed=0
 
 [Window][Example: Auto-resizing window]
-Pos=560,274
-Size=451,114
+Pos=615,281
+Size=509,212
 Collapsed=0
 
 [Window][Example: Constrained Resize]
-Pos=60,60
+Pos=217,133
 Size=633,633
 Collapsed=0
 
@@ -59,9 +59,9 @@ Size=612,482
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=625,79
+Pos=621,-4
 Size=901,748
-Collapsed=1
+Collapsed=0
 
 [Window][Horizontal contents size demo window]
 Pos=60,60
@@ -84,22 +84,22 @@ Size=472,61
 Collapsed=0
 
 [Window][Same title as another window##2]
-Pos=100,200
-Size=451,61
+Pos=352,627
+Size=822,333
 Collapsed=0
 
 [Window][###AnimatedTitle]
-Pos=649,368
-Size=352,104
+Pos=224,429
+Size=479,204
 Collapsed=0
 
 [Window][Same title as another window##1]
-Pos=564,242
-Size=451,61
+Pos=113,261
+Size=558,186
 Collapsed=1
 
 [Window][Example: Custom rendering]
-Pos=538,229
+Pos=825,427
 Size=485,509
 Collapsed=0
 
@@ -130,7 +130,7 @@ Collapsed=0
 
 [Window][About Dear ImGui]
 Pos=423,152
-Size=570,442
+Size=640,514
 Collapsed=0
 
 [Window][Main Control]
@@ -142,6 +142,26 @@ Collapsed=0
 Pos=196,694
 Size=1102,423
 Collapsed=1
+
+[Window][Memory Editor]
+Pos=484,352
+Size=762,449
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=750,70
+Size=748,894
+Collapsed=0
+
+[Window][Save?]
+Pos=616,345
+Size=368,209
+Collapsed=0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
