--- a/BotLineServer/BotLineServer.vcxproj
+++ b/BotLineServer/BotLineServer.vcxproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="BotLine.h" />
     <ClInclude Include="BotLineServer.h" />
+    <ClInclude Include="Component\DataComponent.h" />
     <ClInclude Include="Component\JetbotProcessingComponent.h" />
     <ClInclude Include="Component\NetworkComponent.h" />
     <ClInclude Include="DeviceResources.h" />
@@ -191,6 +192,7 @@
   <ItemGroup>
     <ClCompile Include="BotLine.cpp" />
     <ClCompile Include="BotLineServer.cpp" />
+    <ClCompile Include="Component\DataComponent.cpp" />
     <ClCompile Include="Component\JetbotProcessingComponent.cpp" />
     <ClCompile Include="Component\NetworkComponent.cpp" />
     <ClCompile Include="DeviceResources.cpp" />
