--- a/BotLineServer/imgui.ini
+++ b/BotLineServer/imgui.ini
@@ -9,7 +9,7 @@ Size=339,111
 Collapsed=0
 
 [Window][Log]
-Pos=782,387
+Pos=867,624
 Size=921,306
 Collapsed=0
 
@@ -161,6 +161,26 @@ Collapsed=0
 [Window][Save?]
 Pos=616,345
 Size=368,209
+Collapsed=0
+
+[Window][Memory]
+Pos=824,360
+Size=277,465
+Collapsed=0
+
+[Window][Memory1]
+Pos=1294,222
+Size=277,456
+Collapsed=0
+
+[Window][Memory3]
+Pos=999,220
+Size=277,354
+Collapsed=0
+
+[Window][Memory2]
+Pos=707,223
+Size=277,384
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
