--- a/BotLineServer/BotLineServer.vcxproj
+++ b/BotLineServer/BotLineServer.vcxproj
@@ -151,9 +151,12 @@
   <ItemGroup>
     <ClInclude Include="BotLine.h" />
     <ClInclude Include="BotLineServer.h" />
+    <ClInclude Include="Component\BaseProcessingComponent.h" />
     <ClInclude Include="Component\DataComponent.h" />
     <ClInclude Include="Component\JetbotProcessingComponent.h" />
     <ClInclude Include="Component\NetworkComponent.h" />
+    <ClInclude Include="Component\WebProcessingComponent.h" />
+    <ClInclude Include="Data\DataManager.h" />
     <ClInclude Include="DeviceResources.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="imgui\imconfig.h" />
@@ -195,6 +198,8 @@
     <ClCompile Include="Component\DataComponent.cpp" />
     <ClCompile Include="Component\JetbotProcessingComponent.cpp" />
     <ClCompile Include="Component\NetworkComponent.cpp" />
+    <ClCompile Include="Component\WebProcessingComponent.cpp" />
+    <ClCompile Include="Data\DataManager.cpp" />
     <ClCompile Include="DeviceResources.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
